--- a/static/styles/_custom.scss
+++ b/static/styles/_custom.scss
@@ -1,12 +1,11 @@
-// footer styles
-.fix-body
+html, body
 {
     width: 100%;
-    height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
 }
+// footer styles
 
 img.footer-logo {
   max-width: 150px;
